Complete all missing Swagger annotations
